# personal-site

./: .gitignore  build.sh
.github/workflows/: deploy.yml
site/: config.toml
site/content/: _index.md
site/content/misc/: _index.md
site/content/work/: _index.md  aya.md  compile.md  icra.md  qmind2023.md  qmind2024.md
site/static/: conway.js  wasim.js  wasim_bg.wasm  worms.js
site/static/css/: bamboo.css
site/templates/: index.html  page.html  section.html
wasim/: Cargo.toml
wasim/src/: lib.rs
